--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 <body>
   <nav></nav>
   <div id="app">Loading</div>
-  <script src="./config.js">
-
-  </script>
+  <script src="//unpkg.com/lodash/lodash.min.js"></script>
+  <script src="./script/utils.js"></script>
+  <script src="./script/search.js"></script>
+  <script src="./script/common.js"></script>
+  <script src="./script/main.js"></script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
+  <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
+  <script src="https://unpkg.com/docsify-copy-code@2"></script>
 </body>
 </html>
