--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
@@ -8,29 +7,18 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-  <!-- <link rel="stylesheet" href="//h5.m.taobao.com/css/trip/weex-ui/index.min.css"> -->
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/Netflix/pollyjs/master/docs/assets/styles.css">
-
 </head>
-
 <body>
-  <nav>
-    <a href="#">首页</a>
-    <a href="#/cryptape/cita/develop/docs/README.md">CITA</a>
-    <a href="#/CITA-Toys/CITA-Toys-Wallet/develop/README.md">Microscope</a>
-    <a href="#/CITA-Toys/web3/master/README.md">Web3.js</a>
-  </nav>
+  <nav></nav>
   <div id="app">Loading</div>
-  <script src="./script/index.js"></script>
-  <!-- <script src="//unpkg.com/lodash/lodash.min.js"></script> -->
-  <!-- <script src="./script/utils.js"></script>
+  <script src="//unpkg.com/lodash/lodash.min.js"></script>
+  <script src="./script/utils.js"></script>
   <script src="./script/search.js"></script>
   <script src="./script/common.js"></script>
-  <script src="./script/main.js"></script> -->
+  <script src="./script/main.js"></script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
   <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
   <script src="https://unpkg.com/docsify-copy-code@2"></script>
 </body>
-
 </html>
