--- a/index.html
+++ b/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="description" content="Description">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
 </head>
+
 <body>
-  <nav></nav>
-  <div id="app">Loading</div>
-  <script src="//unpkg.com/lodash/lodash.min.js"></script>
-  <script src="./script/utils.js"></script>
-  <script src="./script/search.js"></script>
-  <script src="./script/common.js"></script>
-  <script src="./script/main.js"></script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
-  <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
-  <script src="https://unpkg.com/docsify-copy-code@2"></script>
+    <nav></nav>
+    <div id="app">Loading</div>
+    <script>
+        window.$docsify = {
+            name: 'Nervos Network',
+            repo: '',
+            loadSidebar: true,
+            autoHeader: true,
+            subMaxLevel: 6,
+            loadNavbar: true,
+
+            homepage: 'readme.md',
+
+            basePath: './',
+
+            alias: {
+                '/.*/_sidebar.md': 'zh-CN/_sidebar.md',
+                '/.*/__navbar.md': 'zh-CN/__navbar.md',
+            },
+
+            search: 'auto',
+
+            search: {
+                maxAge: 86400000, // 过期时间，单位毫秒，默认一天
+
+                // 支持本地化
+                placeholder: {
+                    // '/zh-CN/': '搜索',
+                    '/': 'Type to search',
+                },
+
+                // 支持本地化
+                noData: {
+                    // '/zh-CN/': '找不到结果',
+                    '/': 'No Results',
+                },
+
+                // 搜索标题的最大程级, 1 - 6
+                depth: 6,
+            }
+        }
+    </script>
+    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
+    <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
+    <script src="https://unpkg.com/docsify-copy-code@2"></script>
+
 </body>
+
 </html>
