use local scripts instead of cdn

--- a/index.html
+++ b/index.html
@@ -13,18 +13,11 @@
 <body>
     <nav></nav>
     <div id="app">Loading</div>
-    <script>
-        var customization = {
-
-            name: 'Nervos AppChain', // name of this document
-
-            homepage: 'zh-CN/get-started/intro.md',// the home page
-        }
-    </script>
     <script src="//unpkg.com/lodash/lodash.min.js"></script>
-    <script src="https://rawgit.com/cryptape/Nervos-Docs/master/script/utils.js"></script>
-    <script src="https://rawgit.com/cryptape/Nervos-Docs/master/script/common-setting.js"></script>
-    <script src="https://rawgit.com/cryptape/Nervos-Docs/master/script/main.js"></script>
+    <script src="script/utils.js"></script>
+    <script src="script/common-setting.js"></script>
+    <script src="script/customization-setting.js"></script>
+    <script src="script/main.js"></script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
     <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
     <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
