--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <script src="script/common-setting.js"></script>
     <script src="script/customization-setting.js"></script>
     <script src="script/main.js"></script>
-    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
-    <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
-    <script src="https://unpkg.com/docsify-copy-code@2"></script>
+    <script src="script/sidebar.js"></script>
+    <script src="//unpkg.com/docsify/lib/docsify.min.js "></script>
+    <script src="//unpkg.com/docsify/lib/plugins/search.js "></script>
+    <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js "></script>
+    <script src="https://unpkg.com/docsify-copy-code@2 "></script>
 </body>
+
 </html>
