--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-</head>
-
-<body>
-    <nav></nav>
-    <div id="app">Loading</div>
     <script src="//unpkg.com/lodash/lodash.min.js"></script>
     <script src="script/utils.js"></script>
     <script src="script/common-setting.js"></script>
     <script src="script/customization-setting.js"></script>
     <script src="script/main.js"></script>
+</head>
+
+<body>
+    <nav></nav>
+    <div id="app">Loading</div>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
     <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
     <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
     <script src="https://unpkg.com/docsify-copy-code@2"></script>
 </body>
+
 </html>
