--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- this file is necessary for generating docsify document site -->
+<!-- The only part you need to change is the title -->
+<!-- if you need more features on your document site, contact haichao@cryptape.com -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +14,7 @@
     <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
     <script src="//unpkg.com/lodash/lodash.min.js"></script>
     <script src="script/utils.js"></script>
+    <script src="script/customization-value.js"></script>
     <script src="script/common-setting.js"></script>
     <script src="script/customization-setting.js"></script>
     <script src="script/main.js"></script>
@@ -23,6 +28,7 @@
     <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
     <script src="//unpkg.com/docsify-edit-on-github@1.0.1/index.js"></script>
     <script src="https://unpkg.com/docsify-copy-code@2"></script>
+
 </body>
 
 </html>
