--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="app-nav no-badge">
         <ul>
             <li>
-                <a href="https://cryptape.github.io/Nervos-Docs">Nervos</a>
+                <a href="https://docs.nervos.org/">Nervos</a>
                 <ul>
                     <li>
                         <a href="https://cryptape.github.io/Nervos-AppChain-Docs/">AppChain</a>
