--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="https://cryptape.github.io/Neuron-Android/#/"  target="_about">Neuron</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/Microscope/"  target="_about">Microscope</a>
+                        <a href="https://cryptape.github.io/microscope/"  target="_about">Microscope</a>
                     </li>
                 </ul>
             </li>
