--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <nav class="app-nav no-badge">
         <ul>
             <li>
-                <a href="https://docs.nervos.org/"  target="_about">Nervos</a>
+                <a href="https://docs.nervos.org/" target="_about">Nervos</a>
                 <ul>
                     <li>
-                        <a href="https://cryptape.github.io/Nervos-AppChain-Docs/">AppChain</a>
+                        <a href="https://cryptape.github.io/nervos-appchain-docs/">AppChain</a>
                     </li>
                     <li>
                         <a href="https://cryptape.github.io/cita/"  target="_about">CITA</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/Neuron-Android/#/"  target="_about">Neuron</a>
+                        <a href="https://cryptape.github.io/neuron-android/#/"  target="_about">Neuron</a>
                     </li>
                     <li>
                         <a href="https://cryptape.github.io/microscope/"  target="_about">Microscope</a>
