--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-
+    <link rel="stylesheet" href="https://cdn.cryptape.com/styles/docs.css">
 </head>
 
 <body>
@@ -21,19 +21,19 @@
     <nav class="app-nav no-badge">
         <ul>
             <li>
-                <a href="https://docs.nervos.org/" target="_about">Nervos</a>
+                <a href="https://docs.nervos.org/" target="_about" class="app-nav-1">Nervos</a>
                 <ul>
                     <li>
                         <a href="https://cryptape.github.io/nervos-appchain-docs/">AppChain</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/cita/"  target="_about">CITA</a>
+                        <a href="https://cryptape.github.io/cita/" target="_about">CITA</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/neuron-android/#/"  target="_about">Neuron</a>
+                        <a href="https://cryptape.github.io/neuron-android/#/" target="_about">Neuron</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/nervosj/"  target="_about">nervosj</a>
+                        <a href="https://cryptape.github.io/nervosj/" target="_about">nervosj</a>
                     </li>
                 </ul>
             </li>
