--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                         <a href="https://cryptape.github.io/nervos-appchain-docs/">AppChain</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/cita/"  target="_about">CITA</a>
+                        <a href="https://cryptape.github.io/cita/" target="_about">CITA</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/neuron-android/#/"  target="_about">Neuron</a>
+                        <a href="https://cryptape.github.io/neuron-android/#/" target="_about">Neuron</a>
                     </li>
                     <li>
-                        <a href="https://cryptape.github.io/nervosj/"  target="_about">nervosj</a>
+                        <a href="https://cryptape.github.io/nervosj/" target="_about">nervosj</a>
                     </li>
                 </ul>
             </li>
@@ -81,6 +81,7 @@
 
         gtag('config', 'UA-122001869-2');
     </script>
+    <script src="https://cdn.cryptape.com/scripts/external.js"></script>
 
 
 </body>
